--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,7 +88,8 @@ h1 span, h2 span { font-size : 60%;}
 h3 span { font-size : 70%;}
 h2 {font-weight:700; font-size: 1.4em; line-height: 2.4em; margin-bottom:0px;}
 h3, h3 a {font-weight:700; font-size:1.2em;}
-h3 a, .news h3 a {font-weight:700; font-size:1em; line-height: 1em; font-family: 'Spectral', Georgia, serif; color: #555; text-decoration: none;}
+h3, h3 a:hover {text-decoration: none;}
+h3 a, .news h3 a {font-weight:700; font-size:1em; line-height: 1em; font-family: 'Spectral', Georgia, serif; color: #555; text-decoration: underline;}
 h2 span, h4 span, p span {color:#777;}
 h3 span, h3 a span {color:#555;}
 article h2 {margin-top:3em; line-height: 1.5em;}
@@ -136,7 +137,7 @@ section {
 }
 #layout-post header, #dashbord-grid header, #layout header {
  border-bottom: 1px solid #ccc;
- padding-bottom: 2em;
+ padding-bottom: 1em;
 }
 .news {
  padding: 2em 0;
@@ -370,6 +371,28 @@ figcaption {
 #image_home img {
   width: 50vw;
 }
+.breadcrumb {
+  padding-top: 1em;
+  border-top: 1px solid #ccc;
+  margin-top: 1em;
+}
+.breadcrumb ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 0;
+  font-size: .8em;
+}
+.breadcrumb li::before {
+  content: "> ";
+}
+.breadcrumb li:first-child::before {
+  content: "";
+}
+.breadcrumb li {
+  margin-right: .5em;
+}
+.breadcrumb span {color:#777;}
 footer ul {
   list-style: none;
   padding-left: 1em;
@@ -399,7 +422,7 @@ fieldset {
 fieldset abbr {
   color: #f78686;
 }
-label.hidden {
+.hidden {
   position: absolute;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
@@ -524,6 +547,10 @@ input[type="submit"] {
   }
   h2 {
     font-size: 1.2em;
+  }
+  #layout-post header h2, #layout header h2 {
+    font-size: 1.3em;
+    line-height: 1.3em;
   }
   h3 {
     font-size: 1.1em;
